Green Zone - Update Front 2
